# ProjetIntegrateur-3

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend_server/: .eslintrc.json  .gitignore  .mocharc.json  Dockerfile  package-lock.json  package.json  tsconfig.json
backend_server/src/: app.ts  server.ts
backend_server/src/classes/: http.exception.ts
backend_server/src/controllers/: command.controller.spec.ts  command.controller.ts  info.controller.ts
backend_server/src/interfaces/: Quaternion.ts
backend_server/src/services/: command.service.spec.ts  command.service.ts  event-bus.service.spec.ts  event-bus.service.ts  exploration.service.spec.ts  exploration.service.ts  file.service.spec.ts  file.service.ts  info.service.spec.ts  info.service.ts  map.service.spec.ts  map.service.ts  ros.service.spec.ts  ros.service.ts  socket-manager.service.spec.ts  socket-manager.service.ts
backend_server/src/utils/: EventEmitter.ts  LogSocketManager.ts  Logger.ts  constants.ts
front-end/robot-commander/: Dockerfile  README.md  angular.json  karma.conf.js  package-lock.json  package.json
front-end/robot-commander/src/: custom-theme.scss  (+2 more)
robot_physique_ws/: Dockerfile
simulation_ws/: Dockerfile
simulation_ws/src/simulation_bringup/: CMakeLists.txt  package.xml
simulation_ws/src/simulation_bringup/config/: limo_diff_drive.rviz  limo_diff_drive_cartographer.lua  limo_diff_drive_cartographer1.lua  ros_gz_bridge_0.yaml  ros_gz_bridge_1.yaml
simulation_ws/src/simulation_bringup/launch/: diff_drive.launch.py  generate_world.py
(+104 files in other folders)
